[package]
name = "advent-of-code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.94"
clap = { version = "4.5.23", features = ["derive"] }
md5 = "0.7.0"
paste = "1.0.15"
regex = "1.11.1"
