[package]
name = "advent-of-code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.94"
clap = { version = "4.5.23", features = ["derive"] }
itertools = "0.13.0"
md5 = "0.7.0"
memoize = "0.4.2"
paste = "1.0.15"
pathfinding = "4.12.0"
regex = "1.11.1"
seq-macro = "0.3.5"
serde_json = "1.0.134"
thiserror = "2.0.9"

[dev-dependencies]
test-case = "3.3.1"
